processed/jira/txt/LU/LU-17657.txt
Key:        LU-17657
Summary:    gcc 13 stricter enum checking
Link:       https://jira.whamcloud.com/browse/LU-17657
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Wed, 20 Mar 2024 07:50:37 +0000
Updated:    Tue, 21 May 2024 19:52:37 +0000
Resolved:   Tue, 21 May 2024 19:52:37 +0000
Links:      Related: is related to LU-17504

--- Description ---
gcc 13 does stricter enum enforcement

lustre_msg_check_version:

/home/shaun/lustre-release/lustre/ptlrpc/pack_generic.c:81:5: error: conflicting types for ‘lustre_msg_check_version’ due to enum/integer mismatch; have ‘int(struct lustre_msg_v2 *, enum lustre_msg_version)’ [-Werror=enum-int-mismatch]
   81 | int lustre_msg_check_version(struct lustre_msg *msg,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/shaun/lustre-release/lustre/ptlrpc/pack_generic.c:48:
/home/shaun/lustre-release/lustre/include/lustre_net.h:2293:5: note: previous declaration of ‘lustre_msg_check_version’ with type ‘int(struct lustre_msg_v2 *, __u32)’ {aka ‘int(struct lustre_msg_v2 *, unsigned int)’}
 2293 | int lustre_msg_check_version(struct lustre_msg *msg, __u32 version);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
/home/shaun/lustre-release/lustre/ptlrpc/pack_generic.c:858:20: error: conflicting types for ‘lustre_msghdr_get_flags’ due to enum/integer mismatch; have ‘enum lustre_msghdr(struct lustre_msg_v2 *)’ [-Werror=enum-int-mismatch]
  858 | enum lustre_msghdr lustre_msghdr_get_flags(struct lustre_msg *msg)
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
/home/shaun/lustre-release/lustre/include/lustre_net.h:2321:7: note: previous declaration of ‘lustre_msghdr_get_flags’ with type ‘__u32(struct lustre_msg_v2 *)’ {aka ‘unsigned int(struct lustre_msg_v2 *)’}
 2321 | __u32 lustre_msghdr_get_flags(struct lustre_msg *msg);
      |       ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[6]: *** [scripts/Makefile.build:299: /home/shaun/lustre-release/lustre/ptlrpc/pack_generic.o] Error 1

llapi_layout_comp_use

liblustreapi_layout.c:2141:5: error: conflicting types for ‘llapi_layout_comp_use’ due to enum/integer mismatch; have ‘int(struct llapi_layout *, enum llapi_layout_comp_use)’ [-Werror=enum-int-mismatch]
 2141 | int llapi_layout_comp_use(struct llapi_layout *layout,
      |     ^~~~~~~~~~~~~~~~~~~~~
In file included from liblustreapi_layout.c:44:
/home/shaun/lustre-release/lustre/include/lustre/lustreapi.h:1249:5: note: previous declaration of ‘llapi_layout_comp_use’ with type ‘int(struct llapi_layout *, uint32_t)’ {aka ‘int(struct llapi_layout *, unsigned int)’}
 1249 | int llapi_layout_comp_use(struct llapi_layout *layout, uint32_t pos);
      |     ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

--- Comment (pjones, Tue, 21 May 2024 19:52:37 +0000) ---
Merged for 2.16

--- Comment (gerrit, Tue, 21 May 2024 18:24:06 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/54468/

Subject: LU-17657 build: gcc 13 stricter enum checking

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 0d7d9aedaf4f85d97cf82888b2a5beab9dcd65c3

--- Comment (gerrit, Wed, 20 Mar 2024 07:53:56 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/54468

Subject: LU-17657 build: gcc 13 stricter enum checking

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 6cfa6190d12bbff4ba76349af0c236b38701ccab
